[~] fix text alignment

--- a/client/src/Login/Login.css
+++ b/client/src/Login/Login.css
@@ -81,18 +81,9 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    width: 50%;
-}
-
-.login-box-btns .login-box-icons .icon {
-    transform: scale(1.5);
-    cursor: pointer;
-    transition: 0.3s ease;
-}
-
-.login-box-btns .login-box-icons .icon:hover {
-    transform: scale(1.7);
-    transition: 0.3s ease;
+    flex-direction: column;
+    text-align: row;
+    width: 100%;
 }
 
 .login-box-btns .login-box-icons .oauth-button {
@@ -108,7 +99,7 @@
     box-shadow: 0 2px 3px rgba(0, 0, 0, 0.384);
 }
 
-.regiloginster-box-btns .login-box-icons .oauth-button h6 {
+.login-box-btns .login-box-icons .oauth-button h6 {
     margin: 0;
     padding: 0;
 }
@@ -122,6 +113,18 @@
 .login-box-btns .login-box-icons a:hover {
     transform: scale(1.02);
     cursor: pointer;
+    transition: 0.3s ease;
+}
+
+.login-box-btns .login-box-icons .icon {
+    transform: scale(1.5);
+    cursor: pointer;
+    transition: 0.3s ease;
+    color: black;
+}
+
+.login-box-btns .login-box-icons .icon:hover {
+    transform: scale(1.7);
     transition: 0.3s ease;
 }
 
